third done + first fixed

--- a/module06/.vscode/settings.json
+++ b/module06/.vscode/settings.json
@@ -3,7 +3,6 @@
 		"array": "cpp",
 		"atomic": "cpp",
 		"bit": "cpp",
-		"*.tcc": "cpp",
 		"cctype": "cpp",
 		"clocale": "cpp",
 		"cmath": "cpp",
@@ -42,8 +41,10 @@
 		"new": "cpp",
 		"numbers": "cpp",
 		"ostream": "cpp",
+		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"ctime": "cpp"
 	}
 }
