--- a/module07/ex02/Makefile
+++ b/module07/ex02/Makefile
@@ -2,13 +2,13 @@ NAME				=		array
 CXX					=		c++
 CXXFLAGS			=		-std=c++98
 CXXFLAGS			+=		-Wall -Wextra -Werror
-CXXFLAGS			+=		-fsanitize=address -g3
+# CXXFLAGS			+=		-fsanitize=address -g3
 SRCS				=		main.cpp
 OBJS				=		$(SRCS:.cpp=.o)
 
 all	:	$(NAME)
 
-%.o		:	%.c
+%.o		:	%.cpp
 	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
 $(NAME)	:	$(OBJS)
