--- a/module09/ex02/Makefile
+++ b/module09/ex02/Makefile
@@ -2,7 +2,7 @@ NAME				=		PmergeMe
 CXX					=		c++
 CXXFLAGS			=		-std=c++98
 CXXFLAGS			+=		-Wall -Wextra -Werror
-# CXXFLAGS			+=		-fsanitize=address -g3
+CXXFLAGS			+=		-fsanitize=address -g3
 SRCS				=		PmergeMe.cpp main.cpp
 OBJS				=		$(SRCS:.cpp=.o)
 
